# prefect-test

./: LICENSE  README.md  create_service_prefect_server.ps1  get_repo_info-deployment.yaml  main-deployment.yaml  pyproject.toml  start.prefect_server.bat  start_prefect_agent.bat  test.ipynb
.github/workflows/: deployment.yml
src/: repo_info.py  rpa_test.py
